# npio

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
benches/: job_bench.rs
docs/: ARCHITECTURE.md  INTEGRATION.md
examples/: bookmarks.rs  directory_listing.rs  file_copy.rs  places.rs  repro_md5.rs
src/: backend.rs  cancellable.rs  drive.rs  error.rs  file.rs  file_enumerator.rs  file_info.rs  iostream.rs  job.rs  lib.rs  metadata.rs  model.rs  monitor.rs  mount.rs  service.rs  volume.rs
src/backend/: local.rs  mount.rs  thumbnail.rs  udisks2.rs
src/file/: local.rs
src/model/: devices.rs  directory.rs
src/service/: bookmarks.rs  places.rs  thumbnail.rs  volumemonitor.rs
tests/: bookmarks_test.rs  devices_model_test.rs  directory_model_test.rs  integration_test.rs  job_test.rs  local_backend_test.rs  metadata_test.rs  monitor_test.rs  mount_backend_test.rs  mount_volume_drive_test.rs  places_test.rs  thumbnail_test.rs  trash_test.rs  udisks2_test.rs
