[package]
name = "npio"
version = "0.0.1"
authors = ["Dominik Adrian Grzywak <starterx4@gmail.com>"]
description = "Nepsod Input-Output library. GIO-inspired library for Linux filesystem and device abstractions."
edition = "2021"
repository = "https://github.com/Nepsod/npio"
license = "LGPL-3.0-or-later"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
once_cell = "1.18"
mime_guess = "2.0"
infer = "0.15"
notify = "6.1"
futures = "0.3"
bitflags = "2.4"
directories = "5.0"
chrono = "0.4"
percent-encoding = "2.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[lib]
name = "npio"
path = "src/lib.rs"

[[bench]]
name = "job_bench"
harness = false